<resources>
    <string name="app_name">XKik</string>
    <string name="title_activity_main">XKik</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="media_settings">Media Settings</string>
    <string name="fake_camera">Fake Camera</string>
    <string name="receipt_settings">Receipt Settings</string>
    <string name="disable_read_receipts">Disable Read Receipts</string>
    <string name="disable_typing_receipts">Disable Typing Receipts</string>
    <string name="warning_disclaimer">Changing settings automatically kills Kik in the background\n\nKIK is the property of KIK INTERACTIVE INC. XKik is in no way affiliated with, authorized, maintained, sponsored or endorsed by KIK INTERACTIVE INC or any of its affiliates or subsidiaries. This is an independent application.</string>
    <string name="compability">Compatible with Kik 11.35.0.18701</string>
    <string name="version">Version 1.1.5</string>
    <string name="welcome_to_xkik">Welcome to XKik!</string>
    <string name="xkik_logo">XKik Logo</string>
    <string name="enable_dev_mode">Enable Dev Mode</string>
    <string name="technical_settings">Technical Settings</string>
    <string name="color_tweaks">Color Tweaks</string>
    <string name="exact_dates">Exact dates</string>
    <string name="reset_tip">Long-Clicking on a button resets it\'s respective value</string>
    <string name="text_tweaks">Text Tweaks</string>
    <string name="smiley_settings">Smiley Settings</string>
    <string name="auto_add_smiley">Automatically add smiley when tapped in chat message</string>
    <string name="inet_required">(Internet connection required to view/add smileys)</string>
    <string name="add_smiley_by_id">Add Smiley By ID</string>
    <string name="license_text">XKik is licenced under GNU General Public License v3.0\n\nLibraries used:\n\nokhttp - Apache \n2.0\ncommons-io - Apache 2.0\ngxson - Apache 2.0\nmaterial-dialogs - MIT\nVintageChroma - Apache 2.0\nuniversalimageloader - Apache 2.0\nandroid-process-button - MIT\nEasyFilePickerDialog - Apache 2.0</string>
    <string name="whos_reading">Who\'s reading</string>
    <string name="done">Done</string>
    <string name="quicksettings_tip">Some of these Settings can be accessed and changed quickly by holding down the settings button in the main KIK screen</string>
    <string name="longer_camera_record">Longer camera record time</string>
    <string name="import_export">Import/Export</string>
    <string name="export_to_text_file">Export to text file</string>
    <string name="import_from_public_database">Import from public database</string>
    <string name="import_from_text_file">Import from text file</string>
    <string name="background_picture">Image Background</string>
    <string name="dark_chat_background">Dark Chat Background</string>
    <string name="disable_forwarding">Disable Forwarding</string>
    <string name="disable_saving">Disable Saving</string>
    <string name="unfilter_gifs">Unfilter GIFs</string>
    <string name="current_status">Current Status</string>
    <string name="loading">Loading...</string>
    <string name="auto_loop_video">Auto loop video</string>
    <string name="auto_mute_video">Auto mute video</string>
    <string name="auto_play_video">Auto Play Video</string>
    <string name="account_manager">Account Manager</string>
    <string name="account_manager_rt">Account Manager [ROOT]</string>
    <string name="xkik_main">XKik Main</string>
    <string name="chat_tweaks">Chat Tweaks</string>
    <string name="visual_tweaks">Visual Tweaks</string>
    <string name="technical_tweaks">Technical Tweaks</string>
    <string name="smiley_manager">Smiley Manager</string>
    <string name="licenses">Licenses</string>
    <string name="account_warnings">Hold down on an account to delete it\n\n\nWARNING: uninstalling XKik does not delete your accounts. Delete your accounts before uninstalling XKik to prevent storage usage.\nWARNING: Deleting your XKik config file will leave your accounts inaccessible - please delete your XKik accounts before deleting the config file</string>
    <string name="add_account">Add Account</string>
    <string name="whoread_info">(Click on a message to view who read it)</string>
    <string name="scrolling_text">Scrolling Text</string>
    <string name="show_toast_on_read">Show toast on read</string>
    <string name="bg_images">Background Image/s</string>
    <string name="bypass_no_save">Bypass no save</string>
</resources>
