<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_xkikmain"
            android:icon="@drawable/ic_xkik"
            android:title="@string/xkik_main" />
        <item
            android:id="@+id/nav_xkik_recpt"
            android:icon="@drawable/ic_xkik_receipt"
            android:title="@string/chat_tweaks" />
        <item
            android:id="@+id/nav_xkik_visual"
            android:icon="@drawable/ic_remove_red_eye_black_24dp"
            android:title="@string/visual_tweaks" />
        <item
            android:id="@+id/nav_xkik_tech"
            android:icon="@drawable/ic_settings_applications_black_24dp"
            android:title="@string/technical_tweaks" />
        <item
            android:id="@+id/nav_xkik_smiley"
            android:icon="@drawable/ic_insert_emoticon_black_24dp"
            android:title="@string/smiley_manager" />

        <item
            android:id="@+id/nav_xkik_acctmgr"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/account_manager" />

        <item
            android:id="@+id/nav_xkik_license"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/licenses" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
