<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.xkikdev.xkik.config_activities.SmileyFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/smilcv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/importbutton"
                android:layout_marginTop="12dp"
                android:id="@+id/smileyScroll">

                <GridLayout
                    android:id="@+id/smileyGrid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="5">

                </GridLayout>
            </ScrollView>

            <Switch
                android:id="@+id/autosmiley"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/inet_warn"
                android:layout_marginTop="12dp"
                android:text="@string/auto_add_smiley" />

            <TextView
                android:id="@+id/smil_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/smiley_settings"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/inet_warn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/smil_title"
                android:layout_centerHorizontal="true"
                android:text="@string/inet_required"
                android:textAlignment="center" />

            <Button
                android:id="@+id/addbyid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/autosmiley"
                android:layout_centerHorizontal="true"
                android:text="@string/add_smiley_by_id" />

            <Button
                android:id="@+id/importbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/import_export"
                android:layout_below="@+id/addbyid"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>
