<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xkikdev.xkik.main_fragment">

    <!-- TODO: Update blank fragment layout -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp">


        <android.support.v7.widget.CardView
            android:id="@+id/recptcv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="4dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">


                    <TextView
                        android:id="@+id/welcometv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_to_xkik"
                        android:textAlignment="center"
                        android:textSize="36sp" />

                    <ImageView
                        android:id="@+id/logopicview"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_below="@+id/welcometv"
                        android:contentDescription="@string/xkik_logo"
                        app:srcCompat="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/versiontv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/logopicview"
                        android:layout_centerHorizontal="true"
                        android:text="@string/version"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/compabilitytv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/versiontv"
                        android:layout_centerHorizontal="true"
                        android:text="@string/compability"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/killwarn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/compabilitytv"
                        android:text="@string/warning_disclaimer"
                        android:textAlignment="center" />

                    <android.support.v7.widget.CardView
                        android:id="@+id/currentStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/killwarn"
                        android:layout_marginTop="5dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/statusTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/current_status"
                                android:textAlignment="center"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/statusText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/statusTitle"
                                android:layout_centerHorizontal="true"
                                android:padding="10dp"
                                android:text="@string/loading"
                                android:textStyle="bold" />
                        </RelativeLayout>

                    </android.support.v7.widget.CardView>

                </RelativeLayout>
            </ScrollView>

        </android.support.v7.widget.CardView>

    </FrameLayout>
</FrameLayout>
