<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/xkik_material_background"
    android:padding="3dp"
    tools:context="com.xkikdev.xkik.config_activities.ChatFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/imgt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="4dp"
                card_view:cardBackgroundColor="@color/xkik_material_card">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/imgtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/media_settings"
                        android:textAlignment="center"
                        android:textColor="@color/xkik_material_text"
                        android:textSize="18sp" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/fake_cam_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/imgtitle"
                        android:layout_marginTop="11dp"
                        android:text="@string/fake_camera"
                        android:textColor="@android:color/white" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/long_cam"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/fake_cam_switch"
                        android:layout_marginTop="11dp"
                        android:text="@string/longer_camera_record"
                        android:textColor="@android:color/white" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/disable_fwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/long_cam"
                        android:layout_marginTop="11dp"
                        android:text="@string/disable_forwarding"
                        android:textColor="@android:color/white" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/disable_save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/disable_fwd"
                        android:layout_marginTop="11dp"
                        android:text="@string/disable_saving"
                        android:textColor="@android:color/white" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/unfilter_gif"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/disable_save"
                        android:layout_marginTop="11dp"
                        android:text="@string/unfilter_gifs"
                        android:textColor="@android:color/white" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/recptcv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgt"
                android:layout_marginTop="10dp"
                app:cardElevation="4dp"
                card_view:cardBackgroundColor="@color/xkik_material_card">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/recptitletv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/receipt_settings"
                        android:textAlignment="center"
                        android:textColor="@color/xkik_material_text"
                        android:textSize="18sp" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/read_recpt_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/recptitletv"
                        android:layout_marginTop="11dp"
                        android:text="@string/disable_read_receipts"
                        android:textColor="@android:color/white" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/typing_recpt_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/read_recpt_switch"
                        android:layout_marginTop="11dp"
                        android:text="@string/disable_typing_receipts"
                        android:textColor="@android:color/white" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/lurk_detector"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/typing_recpt_switch"
                        android:layout_marginTop="11dp"
                        android:text="@string/whos_reading"
                        android:textColor="@android:color/white" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/quickviewTip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recptcv"
                android:layout_centerHorizontal="true"
                android:padding="2dp"
                android:text="@string/quicksettings_tip"
                android:textAlignment="center"
                android:textColor="@color/xkik_material_text" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>