<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/xkik_material_background"
    android:padding="6dp"
    tools:context="com.xkikdev.xkik.config_activities.VisualFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="7dp"
            android:text="@string/reset_tip"
            android:textAlignment="center"
            android:textColor="@color/xkik_material_text" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/recptcv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            app:cardElevation="4dp"
            card_view:cardBackgroundColor="@color/xkik_material_card">


            <RelativeLayout
                android:id="@+id/rll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/titletv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/color_tweaks"
                    android:textAlignment="center"
                    android:textColor="@color/xkik_material_text"
                    android:textSize="18sp" />

                <TableLayout
                    android:id="@+id/color_tl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/titletv">

                </TableLayout>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/darkbg_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/color_tl"
                    android:text="@string/dark_chat_background"
                    android:textColor="@color/xkik_material_text" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/recptcv"
            android:layout_marginTop="12dp"
            app:cardElevation="4dp"
            card_view:cardBackgroundColor="@color/xkik_material_card">


            <RelativeLayout
                android:id="@+id/rll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/cv2"
                android:padding="16dp">

                <TextView
                    android:id="@+id/titletv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/text_tweaks"
                    android:textAlignment="center"
                    android:textColor="@color/xkik_material_text"
                    android:textSize="18sp" />

                <TableLayout
                    android:id="@+id/string_tl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/titletv2">

                </TableLayout>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/accdate_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/string_tl"
                    android:layout_marginTop="12dp"
                    android:text="@string/exact_dates"
                    android:textColor="@color/xkik_material_text" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>


</ScrollView>
